更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -39620,10 +39620,10 @@ sort: by_weight
 煎蛋	jfdjo
 减淡	jfdjoa
 见到	jfdk
-尖刀	jfdki
+键道	jfdki
+尖刀	jfdkia
 捡到	jfdkie
 剑道	jfdkio
-键道	jfdkio
 剪刀	jfdko
 箭道	jfdku
 渐冻	jfdl
@@ -99818,8 +99818,8 @@ sort: by_weight
 宵禁	xkjb
 骁将	xkjca
 小脚	xkjd
-星空键道	xkjd
 啸叫	xkjdo
+星空键道	xkjdo
 小泽	xkje
 笑着	xkjeu
 消减	xkjf
@@ -100106,12 +100106,12 @@ sort: by_weight
 小雅	xkya
 小鸭	xkyai
 消音	xkyb
-星空一笔	xkyb
 消隐	xkyba
 校印	xkybe
 小引	xkybi
+星空一笔	xkybo
 逍遥	xkyd
-星空一道	xkyd
+星空一道	xkydo
 笑靥	xkye
 消夜	xkyea
 宵夜	xkyeo
