--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -9352,6 +9352,18 @@ sort: by_weight
 牛	nqueei
 耨	nr
 耨	nreeeu
+囊	ns
+囊	nseioo
+攮	nsi
+攮	nsiuei
+曩	nso
+囔	nsoe
+囔	nsoeia
+曩	nsoioe
+馕	nsu
+馕	nsuaei
+齉	nsui
+齉	nsuiei
 暖	nt
 暖	ntoiuo
 怒	nu
