--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -3086,7 +3086,7 @@ sort: by_weight
 忿	fnuooa
 佛	fo
 佛	foiaea
-方	fp
+放	fp
 防	fpa
 纺	fpaa
 纺	fpaaoe
@@ -3107,12 +3107,12 @@ sort: by_weight
 仿	fpioea
 钫	fpioo
 钫	fpiooe
-房	fpo
-访	fpoa
+方	fpo
+房	fpoa
+访	fpoao
 房	fpoaoe
 访	fpoaoe
-放	fpoe
-邡	fpoea
+邡	fpoe
 邡	fpoeai
 方	fpoeau
 放	fpoeue
