--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -1,10 +1,16 @@
-粑粑	bab
 ---
 name: xkydcz
 version: "Q1"
 sort: by_weight
 ...
+把把	bab
 爸爸	baba
+---
+name: xkydcz
+version: "Q1"
+sort: by_weight
+...
+把把	babai
 粑粑	babao
 靶标	babd
 把柄	babg
