更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -18311,13 +18311,13 @@ sort: by_weight
 大快人心	dkrx
 打瞌睡	dks
 盗摄	dkse
-道士	dksi
+倒是	dksi
 导师	dksia
 导视	dksiao
 到时	dksie
 到死	dksiee
-倒是	dksii
-道是	dksio
+道士	dksio
+道是	dksioo
 德克士	dksiu
 大开杀戒	dksj
 刀山	dksja
@@ -38008,9 +38008,9 @@ sort: by_weight
 炸毁	jahv
 砸毁	jahve
 杂烩	jahvu
-渣渣	jaj
-眨眨	jaja
-渣渣	jajaa
+眨眨	jaj
+渣渣	jaja
+眨眨	jajai
 扎进	jajb
 杂锦	jajbu
 炸酱	jajc
@@ -38130,9 +38130,9 @@ sort: by_weight
 咋样	jays
 杂院	jayt
 甴曱	jayz
-渣渣	jaz
-眨眨	jaza
-渣渣	jazaa
+眨眨	jaz
+渣渣	jaza
+眨眨	jazai
 杂志	jazi
 渣滓	jazia
 渣子	jaziaa
@@ -49807,8 +49807,8 @@ sort: by_weight
 空燃比	krb
 岿然不动	krbd
 叩拜	krbh
-口鼻	krbi
-抠鼻	krbii
+抠鼻	krbi
+口鼻	krbio
 口爆	krbk
 口碑	krbw
 口杯	krbwo
@@ -61430,7 +61430,7 @@ sort: by_weight
 拿开	nakh
 哪肯	nakn
 哪款	nakt
-纳凉	nal
+哪里	nal
 娜拉	nala
 那辆	nalc
 纳凉	nalca
@@ -80525,8 +80525,8 @@ sort: by_weight
 说声	sosm
 所生	sosmu
 所剩	sosmuu
-所说	soso
-说说	sosoo
+说说	soso
+所说	sosou
 锁上	sosp
 说上	sospo
 所伤	sospu
@@ -118595,9 +118595,9 @@ sort: by_weight
 炸毁	zahv
 砸毁	zahve
 杂烩	zahvu
-渣渣	zaj
-眨眨	zaja
-渣渣	zajaa
+眨眨	zaj
+渣渣	zaja
+眨眨	zajai
 扎进	zajb
 杂锦	zajbu
 炸酱	zajc
@@ -118717,9 +118717,9 @@ sort: by_weight
 咋样	zays
 杂院	zayt
 甴曱	zayz
-渣渣	zaz
-眨眨	zaza
-渣渣	zazaa
+眨眨	zaz
+渣渣	zaza
+眨眨	zazai
 杂志	zazi
 渣滓	zazia
 渣子	zaziaa
