--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -3700,16 +3700,16 @@ sort: by_weight
 羹	gmouou
 鲠	gmu
 鲠	gmuaei
-根	gn
+跟	gn
 艮	gna
 艮	gnaeea
-亘	gne
+根	gne
 根	gneaee
+亘	gneo
 亘	gneoie
 茛	gni
 茛	gniiae
-跟	gno
-哏	gnoa
+哏	gno
 哏	gnoaee
 跟	gnoiae
 国	go
