更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -70896,8 +70896,8 @@ sort: by_weight
 驱策	qucsa
 取出	qucu
 驱除	qucua
-去处	qucue
-去除	qucuea
+去除	qucue
+去处	qucueu
 祛除	qucuo
 曲调	qud
 取大	quda
@@ -71169,8 +71169,8 @@ sort: by_weight
 驱策	qvcsa
 取出	qvcu
 驱除	qvcua
-去处	qvcue
-去除	qvcuea
+去除	qvcue
+去处	qvcueu
 祛除	qvcuo
 亲爱的	qvd
 亲爱哒	qvda
@@ -124569,7 +124569,7 @@ sort: by_weight
 知名人物	zmrw
 怎么忍心	zmrx
 这么容易	zmry
-詹姆斯	zms
+怎么说	zms
 正色	zmse
 增设	zmsee
 增色	zmseeu
@@ -124586,6 +124586,7 @@ sort: by_weight
 正室	zmsieo
 证实	zmsio
 怎么是	zmsiu
+詹姆斯	zmsiua
 宗庙社稷	zmsj
 增删	zmsje
 赠送	zmsl
@@ -124598,8 +124599,7 @@ sort: by_weight
 正身	zmsn
 政审	zmsne
 怎么说呢	zmsnu
-怎么说	zmso
-这么说	zmsoo
+这么说	zmso
 致命伤	zmsp
 征收	zmsr
 走马上任	zmsre
