--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -9226,10 +9226,9 @@ sort: by_weight
 鲵	niuaui
 腻	niue
 腻	niueei
-南	nj
-难	nja
+难	nj
+婻	nja
 难	njaoio
-婻	njau
 婻	njauuo
 楠	nje
 赧	njeo
@@ -9245,8 +9244,9 @@ sort: by_weight
 萳	njiiuo
 喃	njo
 喃	njouoi
-腩	nju
+南	nju
 南	njuoia
+腩	njuu
 腩	njuuoi
 脑	nk
 淖	nka
