--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -1,9 +1,3 @@
----
-name: xkyddz
-version: "Q1"
-sort: by_weight
-...
-那	a
 不	b
 把	ba
 巴	baa
@@ -1777,20 +1771,19 @@ sort: by_weight
 稠	crueua
 臭	crui
 臭	cruieu
-歘	cs
+车	cs
 测	csa
 测	csaaoi
 澈	csao
 澈	csaoea
-车	cse
+厕	cse
 车	cseaei
 坼	cseo
 坼	cseouu
-厕	cseu
+砗	cseu
 栅	cseua
 厕	cseuao
 栅	cseuau
-砗	cseue
 砗	cseuea
 侧	csi
 侧	csiaoi
@@ -1802,6 +1795,7 @@ sort: by_weight
 㬚	csoi
 㬚	csoioe
 恻	csooao
+歘	csou
 歘	csouua
 策	csu
 册	csua
@@ -2557,7 +2551,7 @@ sort: by_weight
 簦	dmu
 簦	dmueao
 等	dmueeo
-扽	dn
+跌	dn
 叠	dna
 绖	dnaa
 绖	dnaaea
@@ -2572,13 +2566,12 @@ sort: by_weight
 碟	dneuei
 蝶	dni
 蝶	dniaei
-佚	dniu
+扽	dniu
 揲	dniue
 扽	dniuea
 佚	dniuee
 揲	dniuei
-跌	dno
-谍	dnoa
+谍	dno
 谍	dnoaei
 喋	dnoe
 咥	dnoea
@@ -2907,7 +2900,6 @@ sort: by_weight
 遁	dyuu
 遁	dyuuoa
 盾	dyuuuo
-有	e
 发	f
 法	fa
 法	faaeoa
@@ -4947,9 +4939,6 @@ sort: by_weight
 馄	hyua
 昏	hyuaoi
 馄	hyuaoi
-呇	i
-上	i
-呇	ioaaoo
 就	j
 渣	ja
 溠	jaa
@@ -7897,8 +7886,7 @@ sort: by_weight
 箩	loueia
 脶	louo
 脶	louoia
-郎	lp
-浪	lpa
+浪	lp
 浪	lpaoae
 琅	lpe
 琅	lpeeoa
@@ -7920,13 +7908,14 @@ sort: by_weight
 莨	lpiioa
 锒	lpio
 锒	lpiooa
-廊	lpo
+郎	lpo
 朗	lpoa
 郎	lpoaai
 㮾	lpoae
 㮾	lpoaee
 塱	lpoaeo
 朗	lpoauu
+廊	lpoe
 廊	lpoeoa
 阆	lpoi
 㫰	lpoio
@@ -8755,7 +8744,9 @@ sort: by_weight
 汶	mna
 懑	mnai
 懑	mnaioa
+呇	mnao
 汶	mnaoeu
+呇	mnaooo
 鞔	mne
 鞔	mneiua
 扪	mni
@@ -9440,7 +9431,6 @@ sort: by_weight
 虐	nzieea
 疟	nzo
 疟	nzoeea
-这	o
 平	p
 怕	pa
 潖	paa
@@ -10427,6 +10417,8 @@ sort: by_weight
 亟	qiaiia
 泣	qiao
 泣	qiaoeo
+呇	qiaoo
+呇	qiaooo
 汽	qiau
 汔	qiaue
 汔	qiauea
@@ -13065,7 +13057,6 @@ sort: by_weight
 饨	tyuaea
 鲀	tyuaea
 豚	tyueua
-们	u
 而	v
 啊	va
 阿	vaa
