更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -3725,9 +3725,9 @@ sort: by_weight
 报忧	bkyrio
 包邮	bkyru
 保养	bkys
-不可一世	bkys
-不可以是	bkyse
+不可一世	bkyse
 不可言说	bkysee
+不可以是	bkysee
 抱养	bkysi
 褒扬	bkyso
 包养	bkysu
@@ -3749,9 +3749,9 @@ sort: by_weight
 不可言喻	bkyye
 不可拥有	bkyyee
 包蕴	bkyyu
-包月	bkyz
 不可预知	bkyz
 不可言状	bkyze
+包月	bkyzu
 半空中	bkz
 爆炸	bkza
 包扎	bkzau
@@ -3988,8 +3988,8 @@ sort: by_weight
 保留意见	blyj
 本来已经	blyje
 变了样	blyp
-变了样	blys
 不利因素	blys
+变了样	blyso
 白鹿原	blyt
 不利于	blyu
 不利于	blyv
@@ -4047,9 +4047,9 @@ sort: by_weight
 蹦极	bmji
 别磨叽	bmjio
 别墨迹	bmjioi
-部门经理	bmjl
+不明觉厉	bmjl
 不明就里	bmjle
-不明觉厉	bmjleo
+部门经理	bmjlo
 薄膜键盘	bmjp
 崩解	bmjx
 巴马科	bmk
@@ -4123,7 +4123,7 @@ sort: by_weight
 报幕员	bmyt
 比目鱼	bmyu
 比目鱼	bmyv
-蔽美扬恶	bmyv
+蔽美扬恶	bmyvi
 不名一文	bmyw
 并没有因为	bmywo
 并没有什么卵用	bmyy
@@ -4232,7 +4232,7 @@ sort: by_weight
 不能接受	bnjse
 本剧	bnju
 本剧	bnjv
-不念旧恶	bnjv
+不念旧恶	bnjve
 笨贼	bnjw
 本届	bnjx
 本节	bnjxe
@@ -4630,9 +4630,9 @@ sort: by_weight
 不破不立	bpbl
 帮帮	bpbp
 棒棒	bpbpe
-帮帮	bpbs
 不胖不瘦	bpbs
-棒棒	bpbse
+帮帮	bpbse
+棒棒	bpbsee
 蚌埠	bpbu
 不偏不倚	bpby
 不排除	bpc
@@ -4677,8 +4677,8 @@ sort: by_weight
 杯盘狼藉	bplj
 绑牢	bplk
 帮忙	bpmp
-帮忙	bpms
 不怕没柴烧	bpms
+帮忙	bpmse
 帮你	bpni
 不匹配	bpp
 绑票	bppd
@@ -4890,8 +4890,8 @@ sort: by_weight
 不死不活	bsbhe
 膀臂	bsbi
 百思不得其解	bsbj
-帮办	bsbj
 百思不解	bsbje
+帮办	bsbjea
 百撕不得骑姐	bsbjei
 比赛版	bsbjeo
 蹩手蹩脚	bsbjo
@@ -4903,9 +4903,9 @@ sort: by_weight
 帮帮	bsbp
 棒棒	bsbpe
 帮帮	bsbs
-不三不四	bsbs
-百试不爽	bsbse
 棒棒	bsbse
+不三不四	bsbsee
+百试不爽	bsbseo
 半身不遂	bsbso
 半生不熟	bsbsou
 蚌埠	bsbu
@@ -4929,16 +4929,16 @@ sort: by_weight
 杯水车薪	bscx
 波士顿	bsd
 棒打	bsda
-北师大	bsda
+北师大	bsdai
 板上钉钉	bsdd
 不舍得	bsde
 不是的	bsdee
 绑定	bsdg
-波斯帝国	bsdg
+波斯帝国	bsdga
 帮顶	bsdge
 绑带	bsdh
 巴士底	bsdi
-邦迪	bsdi
+邦迪	bsdie
 榜单	bsdj
 帮到	bsdk
 保守党	bsdp
@@ -4952,10 +4952,10 @@ sort: by_weight
 泊松分布	bsfb
 表示反对	bsfd
 不升反降	bsfj
-绑缚	bsfu
 不舒服	bsfu
-帮扶	bsfue
+绑缚	bsfua
 标识符	bsfue
+帮扶	bsfuei
 绑匪	bsfw
 包身工	bsg
 别是个傻子吧	bsgb
@@ -4966,8 +4966,8 @@ sort: by_weight
 不是个办法	bsgf
 不胜感激	bsgj
 保守估计	bsgji
-半双工	bsgl
 帮工	bsgl
+半双工	bsglo
 北上广深	bsgs
 比赛规则	bsgz
 备受关注	bsgzu
@@ -4975,8 +4975,8 @@ sort: by_weight
 班师回朝	bshc
 不识好歹	bshd
 不是很大	bshde
-棒喝	bshe
 不适合	bshe
+棒喝	bshee
 不思悔改	bshg
 不是很好	bshh
 表示毫无压力	bshl
@@ -4992,17 +4992,17 @@ sort: by_weight
 必杀技	bsj
 绑扎	bsja
 本世纪初	bsjc
-邦交	bsjd
 不睡觉	bsjd
+邦交	bsjde
 帮教	bsjde
 白色家电	bsjdu
-伴随着	bsje
 帮着	bsje
 绑着	bsjea
+伴随着	bsjei
 部首检字法	bsjf
 比赛结果	bsjg
-棒极	bsji
 本世纪	bsji
+棒极	bsjie
 不胜酒力	bsjl
 毕生精力	bsjle
 本世纪末	bsjm
@@ -5010,10 +5010,10 @@ sort: by_weight
 不思进取	bsjq
 绑架	bsjs
 备受煎熬	bsjv
-榜姐	bsjx
 保时捷	bsjx
 避实就虚	bsjxa
 避实击虚	bsjxao
+榜姐	bsjxe
 博施济众	bsjz
 必胜客	bsk
 白色恐怖	bskb
@@ -5060,7 +5060,7 @@ sort: by_weight
 帮派	bsph
 变速器	bsq
 帮腔	bsqc
-病树前头万木春	bsqc
+病树前头万木春	bsqco
 不胜其烦	bsqf
 半衰期	bsqi
 变声器	bsqio
@@ -15081,9 +15081,9 @@ sort: by_weight
 大案	davje
 大二	davu
 大腕	daw
-大碗	dawj
+打完	dawj
 大腕	dawje
-打完	dawji
+大碗	dawjee
 答问	dawn
 打文	dawni
 大王	dawp
@@ -42087,13 +42087,13 @@ sort: by_weight
 基德	jidee
 急得	jideu
 积德	jideuu
-极点	jidf
+几点	jidf
 绩点	jidfa
-基点	jidfe
-机电	jidfei
+机电	jidfe
+基点	jidfei
+极点	jidfei
 集电	jidfi
-几点	jidfu
-积淀	jidfua
+积淀	jidfu
 急电	jidfui
 祭典	jidfui
 祭奠	jidfuo
