更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -67027,12 +67027,11 @@ sort: by_weight
 侵入	qbru
 沁入	qbrua
 亲如	qbruo
-且不说	qbs
+岂不是	qbs
 擒杀	qbsa
 琴瑟	qbse
 寝室	qbsi
 侵蚀	qbsii
-岂不是	qbsiie
 亲事	qbsio
 寝食	qbsioi
 齐白石	qbsiou
@@ -67043,7 +67042,8 @@ sort: by_weight
 亲生	qbsmo
 前半生	qbsmoo
 亲身	qbsn
-情报所	qbso
+且不说	qbso
+情报所	qbsoo
 亲手	qbsr
 禽兽	qbsri
 螓首	qbsrio
