更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -14664,10 +14664,10 @@ sort: by_weight
 打碟	dadxie
 打盹	dady
 大法	daf
-打发	dafa
-大法	dafae
-大发	dafaea
-打法	dafai
+大法	dafa
+大发	dafae
+打发	dafai
+打法	dafaia
 打翻	dafj
 大凡	dafje
 打饭	dafji
@@ -33807,9 +33807,9 @@ sort: by_weight
 号楼	hklr
 好累	hklw
 好嘛	hkm
-号码	hkma
+好吗	hkma
 好嘛	hkmaa
-好吗	hkmaao
+号码	hkmao
 浩渺	hkmd
 浩淼	hkmda
 毫秒	hkmdo
@@ -51170,8 +51170,8 @@ sort: by_weight
 两遍	lcbfe
 量变	lcbfo
 两百	lcbh
-两臂	lcbi
-两笔	lcbie
+两笔	lcbi
+两臂	lcbie
 两半	lcbj
 凉拌	lcbjo
 两本	lcbn
