更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -93989,9 +93989,9 @@ sort: by_weight
 腕儿	wjvuu
 无疾而终	wjvz
 汪精卫	wjw
-万万	wjwj
-玩玩	wjwje
-玩完	wjwjeo
+玩玩	wjwj
+玩完	wjwje
+万万	wjwjee
 万望	wjwp
 万网	wjwpe
 无拘无束	wjws
