更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -18789,10 +18789,10 @@ sort: by_weight
 担子	djzii
 掸子	djziia
 电解质	djziiu
-单子	djzio
+单字	djzio
+单子	djzioa
 单指	djzioi
 单只	djzioo
-单字	djzioo
 单质	djziou
 胆汁	djziu
 胆战	djzj
