更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -11249,6 +11249,66 @@ sort: by_weight
 癿	qnuiaa
 郄	qnuo
 郄	qnuoai
+求	qo
+湫	qoa
+泅	qoai
+泅	qoaiae
+赇	qoao
+赇	qoaoei
+巯	qoaoo
+巯	qoaooe
+湫	qoauei
+球	qoe
+璆	qoee
+璆	qoeeao
+球	qoeeei
+裘	qoei
+逑	qoeio
+逑	qoeioa
+求	qoeioe
+裘	qoeioe
+鞧	qoeiou
+楸	qoeu
+楸	qoeuei
+仇	qoi
+囚	qoia
+虬	qoiaa
+虬	qoiaaa
+囚	qoiaii
+蝤	qoiao
+蝤	qoiaou
+蚯	qoiau
+蚯	qoiaui
+俅	qoie
+俅	qoieio
+艽	qoii
+萩	qoiiu
+艽	qoiiua
+萩	qoiiue
+仇	qoiuaa
+酋	qoo
+遒	qoou
+酋	qoouei
+遒	qoouoa
+糗	qoouu
+糗	qoouui
+秋	qou
+龟	qoua
+龟	qouaia
+訄	qouao
+訄	qouaoe
+鳅	qouau
+犰	qouaua
+鳅	qouaue
+鹙	qoue
+秋	qoueou
+鹙	qoueua
+丘	qoui
+邱	qouia
+邱	qouiai
+丘	qouiei
+鼽	qouiu
+鼽	qouiua
 求	qq
 湫	qqa
 泅	qqai
