更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -6869,8 +6869,9 @@ sort: by_weight
 别说	bxso
 别上	bxsp
 不徇私情	bxsq
-别收	bxsr
+别手	bxsr
 蹩手	bxsro
+别收	bxsroa
 变性手术	bxss
 别墅	bxsu
 别睡	bxsv
@@ -41337,8 +41338,8 @@ sort: by_weight
 见到	jfdk
 捡到	jfdki
 尖刀	jfdkia
-剑道	jfdkio
 键道	jfdkio
+剑道	jfdkiou
 剪刀	jfdko
 箭道	jfdku
 渐冻	jfdl
@@ -125628,10 +125629,10 @@ sort: by_weight
 致辞	zicieu
 指斥	zicii
 值此	ziciii
-只吃	zicio
+字词	zicio
 只此	zicioi
 之词	zicioo
-字词	zicioo
+只吃	zicioo
 之辞	ziciou
 自此	ziciu
 直尺	ziciua
