--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -9472,15 +9472,15 @@ sort: by_weight
 臑	nkue
 臑	nkueoa
 脑	nkuoeu
-农	nl
+弄	nl
 浓	nla
 浓	nlaoau
-弄	nle
 弄	nleeeu
 侬	nli
 侬	nlioau
-哝	nlo
+农	nlo
 农	nloaua
+哝	nloo
 哝	nlooau
 脓	nlu
 秾	nlue
