更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -5818,6 +5818,7 @@ sort: by_weight
 补眠	bum
 补码	buma
 不妙	bumd
+不摸	bume
 不免	bumf
 不眠	bumfe
 补眠	bumfo
@@ -5829,6 +5830,7 @@ sort: by_weight
 不慢	bumjeo
 补满	bumjo
 部门	bumn
+不摸	bumo
 不忙	bump
 不忙	bums
 不睦	bumu
