--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -837,14 +837,14 @@ sort: by_weight
 钡	bwioa
 钡	bwioao
 倍	bwioeo
-悖	bwo
-呗	bwoa
+呗	bwo
+褙	bwoa
 被	bwoaau
-褙	bwoai
 褙	bwoaie
 呗	bwoaoo
 庳	bwoe
 庳	bwoeui
+悖	bwoo
 悖	bwoouo
 焙	bwou
 糒	bwoue
