更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -1,3 +1,4 @@
+
 ---
 name: xkydcz
 version: "Q1"
@@ -3102,6 +3103,7 @@ sort: by_weight
 瓣膜	bjmo
 不记名投票	bjmp
 半米	bjmt
+不结盟	bjmv
 表姐妹	bjmw
 不仅没有	bjmy
 比基尼	bjn
@@ -4300,6 +4302,7 @@ sort: by_weight
 迸裂	bmlxo
 白茫茫	bmm
 白蒙蒙	bmmm
+白蒙蒙	bmmv
 白毛女	bmn
 本命年	bmnf
 班门弄斧	bmnfe
@@ -10574,6 +10577,8 @@ sort: by_weight
 糙米	ckmto
 草木	ckmu
 朝暮	ckmuu
+草蜢	ckmv
+超萌	ckmve
 草莓	ckmw
 才可能	ckn
 草拟	ckni
@@ -11441,6 +11446,7 @@ sort: by_weight
 城门	cmmn
 成谜	cmmt
 瞠目	cmmu
+承蒙	cmmv
 仓木麻衣	cmmy
 诚能	cmn
 成年	cmnf
@@ -14593,6 +14599,8 @@ sort: by_weight
 纯爷们	cymn
 春末	cymo
 纯木	cymu
+春梦	cymv
+蠢萌	cymve
 纯美	cymw
 醇美	cymwe
 崇洋媚外	cymwi
@@ -15345,6 +15353,7 @@ sort: by_weight
 大忙	dams
 大米	damt
 大幕	damu
+大梦	damv
 大媒	damw
 打腻	dan
 大拿	dana
@@ -16441,6 +16450,7 @@ sort: by_weight
 的路	delu
 得名	demg
 的梦	demm
+的梦	demv
 得票	depd
 德勤	deqb
 得起	deqi
@@ -17432,6 +17442,7 @@ sort: by_weight
 戴帽	dhmku
 呆萌	dhmm
 电话面试	dhms
+呆萌	dhmv
 当红明星	dhmx
 大和民族	dhmz
 逮鸟	dhnd
@@ -17815,6 +17826,7 @@ sort: by_weight
 笛膜	dimou
 低迷	dimt
 低靡	dimti
+缔盟	dimv
 弟妹	dimw
 低眉	dimwi
 低能	dinm
@@ -19158,6 +19170,7 @@ sort: by_weight
 东门	dlmn
 冬末	dlmo
 哆来咪	dlmt
+东盟	dlmv
 冬梅	dlmw
 戴绿帽子	dlmz
 动念	dlnf
@@ -19877,6 +19890,7 @@ sort: by_weight
 多忙	doms
 多米	domt
 夺目	domu
+多梦	domv
 咄呐	dona
 多年	donf
 多难	donj
@@ -22630,6 +22644,7 @@ sort: by_weight
 法盲	famp
 法盲	fams
 伐木	famu
+发蒙	famv
 发霉	famw
 发腻	fani
 发难	fanj
@@ -29902,6 +29917,7 @@ sort: by_weight
 过目	gomu
 国母	gomui
 果木	gomuie
+过猛	gomv
 国美	gomw
 过年	gonf
 果奶	gonh
@@ -30167,6 +30183,7 @@ sort: by_weight
 肛门	gpmn
 钢门	gpmni
 纲目	gpmu
+刚猛	gpmv
 港媒	gpmw
 高朋满座	gpmz
 港片	gppf
@@ -34198,6 +34215,7 @@ sort: by_weight
 寒芒	hjms
 汉姆	hjmu
 汉墓	hjmua
+酣梦	hjmv
 寒梅	hjmw
 很久没有	hjmy
 好几年	hjn
@@ -34590,6 +34608,8 @@ sort: by_weight
 豪门	hkmn
 毫末	hkmo
 毫米	hkmt
+好梦	hkmv
+好萌	hkmva
 好美	hkmw
 毫没	hkmwo
 很可能	hkn
@@ -34947,6 +34967,8 @@ sort: by_weight
 洪魔	hlmoa
 红米	hlmt
 红木	hlmu
+鸿蒙	hlmv
+黄粱梦	hlmve
 红梅	hlmw
 回来没	hlmwi
 火烈鸟	hln
@@ -35206,6 +35228,7 @@ sort: by_weight
 好妹妹乐队	hmmd
 横蛮	hmmj
 灰朦朦	hmmm
+灰朦朦	hmmv
 横眉	hmmw
 横眉怒目	hmnm
 好梦难圆	hmny
@@ -35405,6 +35428,7 @@ sort: by_weight
 很萌	hnmm
 很忙	hnmp
 很忙	hnms
+很萌	hnmv
 很美	hnmw
 很没	hnmwu
 猴年马月	hnmy
@@ -37001,6 +37025,7 @@ sort: by_weight
 毁天灭地	htmd
 缓慢	htmj
 幻梦	htmm
+幻梦	htmv
 幻灭	htmx
 毁童年	htn
 幻念	htnf
@@ -37732,6 +37757,8 @@ sort: by_weight
 会盟	hvmmi
 回门	hvmn
 回眸	hvmr
+荷尔蒙	hvmv
+会盟	hvmvi
 毁灭	hvmx
 皇额娘	hvn
 会宁	hvng
@@ -38890,6 +38917,7 @@ sort: by_weight
 蚱蜢	jamm
 闸门	jamn
 咂摸	jamo
+蚱蜢	jamv
 杂念	janf
 渣男	janj
 扎破	jap
@@ -39337,6 +39365,7 @@ sort: by_weight
 浸没	jbmo
 紧密	jbmt
 浸沐	jbmu
+劲猛	jbmv
 基本没有	jbmy
 就不能	jbn
 今年	jbnf
@@ -42247,6 +42276,7 @@ sort: by_weight
 粳米	jgmtoo
 静穆	jgmu
 敬慕	jgmui
+惊梦	jgmv
 精美	jgmw
 静美	jgmwe
 景美	jgmwo
@@ -44924,6 +44954,7 @@ sort: by_weight
 旧梦	jqmm
 啾咪	jqmt
 舅母	jqmu
+旧梦	jqmv
 就没	jqmw
 几千年	jqn
 就拿	jqna
@@ -45866,6 +45897,7 @@ sort: by_weight
 紧锁眉头	jsmt
 家母	jsmu
 价目	jsmui
+加盟	jsmv
 佳美	jsmw
 假寐	jsmwi
 就是没有	jsmy
@@ -47675,6 +47707,8 @@ sort: by_weight
 解谜	jxmtu
 节目	jxmu
 揭幕	jxmui
+结盟	jxmv
+解梦	jxmvu
 姐妹	jxmw
 近些年	jxn
 接纳	jxna
@@ -50492,6 +50526,7 @@ sort: by_weight
 孔孟	klmm
 空门	klmn
 孔门	klmna
+孔孟	klmv
 克拉玛依	klmy
 恐难	kln
 空难	klnj
@@ -50640,6 +50675,7 @@ sort: by_weight
 坑里	kmli
 科摩罗	kmlo
 坑蒙	kmmm
+坑蒙	kmmv
 坑骗	kmpf
 铿锵	kmqc
 坑钱	kmqf
@@ -53156,6 +53192,8 @@ sort: by_weight
 恋母	lfmu
 楝木	lfmue
 帘幕	lfmuo
+联盟	lfmv
+脸萌	lfmvu
 联袂	lfmw
 连袂	lfmwe
 链霉	lfmwi
@@ -56904,6 +56942,7 @@ sort: by_weight
 绿帽	lvmka
 吕蒙	lvmm
 绿幕	lvmu
+吕蒙	lvmv
 旅美	lvmw
 绿皮	lvpe
 绿皮	lvpi
@@ -57772,6 +57811,7 @@ sort: by_weight
 笼仔面	lzmf
 李梓萌	lzmm
 临阵磨枪	lzmq
+李梓萌	lzmv
 略难	lznj
 愣在那里	lznl
 连珠炮	lzp
@@ -58143,6 +58183,7 @@ sort: by_weight
 忙不忙	mbm
 明不明白	mbmb
 民盟	mbmm
+民盟	mbmv
 泯灭	mbmx
 没病没灾	mbmz
 闽南	mbnj
@@ -59491,6 +59532,7 @@ sort: by_weight
 埋没	mhmo
 麦芒	mhmp
 麦芒	mhms
+卖萌	mhmv
 卖弄	mhnl
 马后炮	mhp
 买票	mhpd
@@ -59754,6 +59796,10 @@ sort: by_weight
 密密	mimto
 咪咪	mimtoo
 靡靡	mimtoo
+迷蒙	mimv
+弥蒙	mimva
+迷朦	mimvo
+迷梦	mimvoe
 迷妹	mimw
 泌尿	mind
 迷你	mini
@@ -60529,6 +60575,8 @@ sort: by_weight
 梦梦	mmmme
 蒙蒙	mmmmi
 孟母	mmmu
+梦梦	mmmve
+蒙蒙	mmmvi
 蒙昧	mmmw
 梦寐	mmmwe
 萌妹	mmmwi
@@ -61752,6 +61800,10 @@ sort: by_weight
 密密	mtmto
 咪咪	mtmtoo
 靡靡	mtmtoo
+迷蒙	mtmv
+弥蒙	mtmva
+迷朦	mtmvo
+迷梦	mtmvoe
 迷妹	mtmw
 没图你说个鸡巴	mtnb
 泌尿	mtnd
@@ -62132,25 +62184,185 @@ sort: by_weight
 母猪	muzu
 木柱	muzue
 墨尔本	mvb
+猛撞	mvbc
+蒙蔽	mvbi
+蒙逼	mvbii
+懵逼	mvbio
+蒙版	mvbji
+蒙板	mvbjie
 秘而不宣	mvbx
+猛吃	mvci
+猛冲	mvcl
+萌宠	mvcli
+蒙尘	mvcn
+猛戳	mvco
+孟尝	mvcp
+猛吹	mvcv
+孟村	mvcyae
+猛打	mvda
+猛地	mvde
+孟德	mvdea
 马尔代夫	mvdf
+萌呆	mvdhi
+梦到	mvdk
+懵懂	mvdl
 摩尔定律	mvdl
+萌动	mvdli
+梦蝶	mvdn
+梦多	mvdo
+梦断	mvdte
 摩尔多瓦	mvdw
+梦蝶	mvdx
+萌发	mvfa
+萌翻	mvfj
+孟非	mvfw
+梦过	mvg
 摩尔根	mvg
+猛攻	mvgl
+盟国	mvgo
+梦过	mvgoe
+蒙古	mvgu
+梦魂	mvh
+猛轰	mvhl
+猛火	mvho
+梦话	mvhs
+梦幻	mvht
+猛虎	mvhu
+梦回	mvhv
 没安好心	mvhx
 敏而好学	mvhxu
+蒙混	mvhy
+梦魂	mvhye
+猛砸	mvja
+猛进	mvjb
+猛将	mvjc
+梦见	mvjf
+梦境	mvjg
+猛击	mvji
+盟军	mvjy
+孟轲	mvke
 马尔可夫	mvkf
 马尔可夫链	mvkl
+猛料	mvld
+蒙了	mvle
+蒙脸	mvlf
+梦里	mvli
+猛力	mvliu
+朦胧	mvll
+蒙胧	mvlli
+蒙眬	mvllii
+矇眬	mvllii
+猛龙	mvllue
+孟浪	mvlp
+孟浪	mvls
+梦露	mvlu
+猛烈	mvlx
 迈阿密	mvm
+猛犸	mvma
+萌喵	mvmd
+蒙面	mvmf
+孟买	mvmh
+梦梦	mvmme
+蒙蒙	mvmmi
+孟母	mvmu
+梦梦	mvmve
+蒙蒙	mvmvi
+蒙昧	mvmw
+梦寐	mvmwe
+萌妹	mvmwi
+蒙难	mvn
 猫儿腻	mvn
+猛男	mvnj
+蒙难	mvnji
+蒙牛	mvnq
+蒙骗	mvpf
+猛跑	mvpk
+孟婆	mvpo
+孟婆	mvpr
+猛扑	mvpu
+懵圈	mvq
 门儿清	mvq
+猛禽	mvqb
+蒙圈	mvqt
+懵圈	mvqto
+猛然	mvrj
+懵然	mvrjo
+蒙人	mvrn
 马鞍山	mvs
+盟誓	mvsi
 莫尔斯	mvsi
+萌死	mvsii
 摩尔斯	mvsio
+猛士	mvsiu
+萌生	mvsm
+猛升	mvsmu
+梦神	mvsn
+蒙上	mvsp
+猛兽	mvsr
+蒙受	mvsri
+梦碎	mvsv
+蒙恬	mvt
 马耳他	mvt
+蒙田	mvtf
+蒙恬	mvtfi
+锰铁	mvtni
+蒙头	mvtr
+猛推	mvtv
+锰铁	mvtxi
+猛一	mvvi
+梦呓	mvvie
+梦遗	mvviei
+蒙恩	mvvn
+萌娃	mvwa
+梦网	mvwp
+萌物	mvwu
+萌新	mvxb
+梦想	mvxc
+梦乡	mvxce
+猛笑	mvxd
+梦醒	mvxg
+猛醒	mvxgu
+猛袭	mvxi
+猛笑	mvxk
+蒙羞	mvxmi
+蒙羞	mvxqi
+萌芽	mvya
+猛药	mvyd
+蒙药	mvydi
+梦魇	mvyf
+蒙眼	mvyfi
+梦萦	mvyg
+盟约	mvyh
+猛一	mvyi
+梦呓	mvyie
+梦遗	mvyiei
+梦魇	mvyj
+蒙眼	mvyji
+猛药	mvyk
+蒙药	mvyki
 卖儿鬻女	mvyn
+盟友	mvyr
+梦游	mvyre
+蒙冤	mvyt
+梦圆	mvyte
+蒙元	mvyti
+盟员	mvyto
+蒙语	mvyu
+蒙语	mvyv
 名额有限	mvyx
+盟约	mvyz
 免安装	mvz
+猛砸	mvza
+猛撞	mvzc
+孟子	mvzi
+梦中	mvzl
+猛增	mvzm
+猛涨	mvzp
+猛长	mvzpu
+蒙住	mvzu
+蒙族	mvzui
+盟主	mvzuo
+猛追	mvzv
 马尾辫	mwb
 没把	mwba
 没变	mwbf
@@ -62371,6 +62583,7 @@ sort: by_weight
 每米	mwmt
 眉目	mwmu
 每亩	mwmuu
+美梦	mwmv
 妹妹	mwmw
 美眉	mwmwo
 美媒	mwmwoa
@@ -63923,6 +64136,7 @@ sort: by_weight
 凝眸	ngmr
 宁谧	ngmt
 凝目	ngmu
+柠檬	ngmv
 那个年代	ngnd
 宁宁	ngng
 男耕女织	ngnz
@@ -64178,6 +64392,8 @@ sort: by_weight
 尼萌	nimm
 泥萌	nimma
 你们	nimn
+尼萌	nimv
+泥萌	nimva
 你妹	nimw
 泥煤	nimwa
 泥泞	ning
@@ -64799,6 +65015,7 @@ sort: by_weight
 农忙	nlms
 浓密	nlmt
 农牧	nlmu
+南联盟	nlmv
 浓眉	nlmw
 农林牧副渔	nlmy
 农奴	nlnu
@@ -65226,6 +65443,7 @@ sort: by_weight
 牛毛	nqmk
 牛虻	nqmm
 南拳妈妈	nqmmu
+牛虻	nqmv
 浓情蜜意	nqmy
 男青年	nqn
 拿腔拿调	nqnd
@@ -65756,6 +65974,7 @@ sort: by_weight
 内门	nwmn
 内膜	nwmo
 内幕	nwmu
+内蒙	nwmv
 内内	nwn
 内难	nwnj
 内能	nwnm
@@ -70908,6 +71127,7 @@ sort: by_weight
 情迷	qgmt
 青木	qgmu
 倾慕	qgmui
+清梦	qgmv
 青梅	qgmw
 轻歌曼舞	qgmwe
 轻蔑	qgmx
@@ -71762,6 +71982,9 @@ sort: by_weight
 凄迷	qimt
 棋迷	qimte
 气密	qimtu
+启蒙	qimv
+绮梦	qimva
+欺蒙	qimve
 凄美	qimw
 齐眉	qimwo
 期内	qin
@@ -77503,6 +77726,9 @@ sort: by_weight
 入迷	rumt
 乳糜	rumtu
 乳母	rumu
+如梦	rumv
+如蒙	rumva
+入梦	rumvu
 乳娘	runc
 如泥	runi
 汝南	runj
@@ -81919,6 +82145,7 @@ sort: by_weight
 山姆	sjmu
 三亩	sjmue
 杉木	sjmuee
+山盟	sjmv
 三昧	sjmw
 世界贸易中心	sjmx
 世界贸易	sjmy
@@ -83230,6 +83457,7 @@ sort: by_weight
 圣母	smmu
 声母	smmue
 生母	smmuu
+生猛	smmv
 什么没有	smmy
 圣母玛丽亚	smmya
 什么名字	smmz
@@ -87251,6 +87479,8 @@ sort: by_weight
 水母	svmu
 水木	svmua
 岁暮	svmui
+睡梦	svmv
+碎梦	svmve
 虽没	svmw
 水能	svn
 水鸟	svnd
@@ -89962,6 +90192,8 @@ sort: by_weight
 台盟	thmma
 太忙	thmp
 太忙	thms
+太猛	thmv
+台盟	thmva
 太美	thmw
 台妹	thmwa
 太妹	thmwe
@@ -91128,6 +91360,7 @@ sort: by_weight
 提拉米苏	tlms
 托勒密	tlmt
 塔里木	tlmu
+同盟	tlmv
 桃李满天下	tlmx
 桃李满园	tlmy
 同林鸟	tln
@@ -91770,6 +92003,7 @@ sort: by_weight
 脱模	tomou
 脱盲	tomp
 脱盲	toms
+托梦	tomv
 驼鸟	ton
 鸵鸟	tond
 驼鸟	tonda
@@ -93922,6 +94156,8 @@ sort: by_weight
 噩梦	vemm
 恶梦	vemme
 恶魔	vemo
+噩梦	vemv
+恶梦	vemve
 峨嵋	vemw
 娥眉	vemwa
 蛾眉	vemwi
@@ -94834,6 +95070,9 @@ sort: by_weight
 异母	vimuaa
 一亩	vimue
 义母	vimuo
+一梦	vimv
+沂蒙	vimva
+遗梦	vimvi
 一枚	vimw
 溢美	vimwa
 伊妹	vimwi
@@ -96021,6 +96260,7 @@ sort: by_weight
 阿里妈妈	vlmm
 勇猛	vlmm
 阿拉木图	vlmt
+勇猛	vlmv
 咏梅	vlmw
 永宁	vlng
 用脑	vlnk
@@ -96338,6 +96578,7 @@ sort: by_weight
 偶们	vrmn
 耳濡目染	vrmr
 欧姆	vrmu
+欧盟	vrmv
 欧美	vrmw
 欧普	vrpu
 呕气	vrq
@@ -97525,6 +97766,7 @@ sort: by_weight
 外貌	whmk
 外贸	whmku
 外蒙	whmm
+外蒙	whmv
 外媒	whmw
 蜗行牛步	whnb
 歪批	whp
@@ -99087,6 +99329,7 @@ sort: by_weight
 王莽	wpms
 网迷	wpmt
 王母	wpmu
+网盟	wpmv
 网媒	wpmw
 忘年	wpn
 往哪	wpna
@@ -99896,6 +100139,7 @@ sort: by_weight
 午门	wumnu
 舞迷	wumt
 乌木	wumu
+无梦	wumv
 妩媚	wumw
 寤寐	wumwo
 乌梅	wumwu
@@ -100683,6 +100927,7 @@ sort: by_weight
 委靡	wwmtu
 微米	wwmtuo
 帷幕	wwmu
+威猛	wwmv
 唯美	wwmw
 味美	wwmwo
 惟美	wwmwoo
@@ -105106,6 +105351,7 @@ sort: by_weight
 细密	ximt
 戏迷	ximta
 细目	ximu
+西蒙	ximv
 熄灭	ximx
 稀泥	xin
 吸纳	xina
@@ -106863,6 +107109,7 @@ sort: by_weight
 凶猛	xlmm
 胸闷	xlmn
 胸膜	xlmo
+凶猛	xlmv
 兄妹	xlmw
 心理描写	xlmx
 小龙女	xln
@@ -108420,6 +108667,8 @@ sort: by_weight
 瞎忙	xsms
 姓甚名谁	xsmsa
 虾米	xsmt
+吓蒙	xsmv
+瞎蒙	xsmvi
 相思鸟	xsn
 吓尿	xsnd
 小试牛刀	xsndi
@@ -110246,6 +110495,8 @@ sort: by_weight
 硝烟弥漫	xymme
 小有名气	xymq
 寻觅	xymt
+迅猛	xymv
+寻梦	xymva
 心有猛虎细嗅蔷薇	xymw
 校园内	xyn
 殉难	xynj
@@ -115166,6 +115417,9 @@ sort: by_weight
 异母	yimuaa
 一亩	yimue
 义母	yimuo
+一梦	yimv
+沂蒙	yimva
+遗梦	yimvi
 一枚	yimw
 溢美	yimwa
 伊妹	yimwi
@@ -117298,6 +117552,7 @@ sort: by_weight
 倚老卖老	ylml
 勇猛	ylmm
 一脸迷茫	ylmme
+勇猛	ylmv
 咏梅	ylmw
 优乐美	ylmwi
 永宁	ylng
@@ -118579,6 +118834,8 @@ sort: by_weight
 油墨	yrmoa
 幽秘	yrmt
 游牧	yrmu
+有梦	yrmv
+幽梦	yrmvi
 优美	yrmw
 有没	yrmwe
 幽美	yrmwi
@@ -119960,6 +120217,7 @@ sort: by_weight
 元谋	ytmr
 圆木	ytmu
 原木	ytmue
+圆梦	ytmv
 袁枚	ytmw
 原煤	ytmwe
 怨念	ytn
@@ -120532,6 +120790,7 @@ sort: by_weight
 预谋	yumr
 玉米	yumt
 余亩	yumu
+愚蒙	yumv
 愚昧	yumw
 余年	yunf
 欲念	yunfu
@@ -121150,6 +121409,7 @@ sort: by_weight
 预谋	yvmr
 玉米	yvmt
 余亩	yvmu
+愚蒙	yvmv
 愚昧	yvmw
 余年	yvnf
 欲念	yvnfu
@@ -122222,6 +122482,7 @@ sort: by_weight
 烟雨濛濛	yymmoe
 云母	yymu
 韵母	yymuo
+云梦	yymv
 运煤	yymw
 陨灭	yymx
 永远没有	yymy
@@ -123251,6 +123512,7 @@ sort: by_weight
 蚱蜢	zamm
 闸门	zamn
 咂摸	zamo
+蚱蜢	zamv
 杂念	zanf
 渣男	zanj
 扎破	zap
@@ -126201,6 +126463,7 @@ sort: by_weight
 字幕	zimuo
 之母	zimuoa
 之墓	zimuoi
+之梦	zimv
 姊妹	zimw
 纸媒	zimwa
 至美	zimwe
@@ -129756,6 +130019,7 @@ sort: by_weight
 缜密	znmt
 枕木	znmu
 砧木	znmue
+真萌	znmv
 真美	znmw
 祖奶奶	znn
 众怒难犯	znnf
@@ -130174,6 +130438,8 @@ sort: by_weight
 着墨	zomoo
 啄米	zomt
 灼目	zomu
+做梦	zomv
+作梦	zomvi
 做媒	zomw
 作媒	zomwi
 作美	zomwio
@@ -132203,6 +132469,7 @@ sort: by_weight
 祖母	zumu
 注目	zumua
 瞩目	zumui
+逐梦	zumv
 驻美	zumw
 竹篾	zumx
 诛灭	zumxo
@@ -132691,6 +132958,8 @@ sort: by_weight
 最忙	zvmp
 最忙	zvms
 追慕	zvmu
+追梦	zvmv
+最萌	zvmvo
 最美	zvmw
 转氨酶	zvmwe
 追拿	zvna
