--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -9168,6 +9168,58 @@ sort: by_weight
 牡	muueeo
 牧	muueue
 穆	muueui
+梦	mv
+孟	mva
+勐	mvai
+勐	mvaiau
+濛	mvaii
+孟	mvaiia
+濛	mvaiio
+檬	mve
+梦	mveeua
+檬	mveiio
+礞	mveu
+礞	mveuii
+蒙	mvi
+蠓	mvia
+蜢	mviaa
+蜢	mviaai
+蟒	mviai
+蟒	mviaii
+㠓	mviaii
+幪	mviaii
+蠓	mviaii
+虻	mviao
+虻	mviaoe
+萌	mvii
+甍	mviie
+甍	mviiea
+蒙	mviiee
+瞢	mviii
+瞢	mviiia
+萌	mviioi
+鹲	mviiu
+鹲	mviiua
+锰	mvio
+锰	mvioai
+盟	mvo
+氓	mvoe
+氓	mvoeae
+黾	mvoi
+黾	mvoiae
+盟	mvoiia
+懵	mvoo
+懵	mvooii
+猛	mvu
+獴	mvua
+猛	mvuaai
+獴	mvuaii
+朦	mvui
+朦	mvuiio
+艨	mvuu
+艋	mvuua
+艋	mvuuai
+艨	mvuuii
 每	mw
 眉	mwa
 湄	mwaa
