更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -28218,10 +28218,9 @@ sort: by_weight
 国家利益	gjly
 广结良缘	gjlyo
 郭敬明	gjm
-干吗	gjma
+干嘛	gjma
 敢吗	gjmaa
-干嘛	gjmae
-干妈	gjmaea
+干妈	gjmae
 干么	gjme
 盖浇面	gjmf
 赶明	gjmg
