更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -58620,7 +58620,8 @@ sort: by_weight
 殁年	menfeu
 摸奶	menh
 模拟	meni
-莫逆	menii
+摸你	menii
+莫逆	meniio
 磨难	menj
 莫能	menm
 莫能	mens
@@ -61017,7 +61018,8 @@ sort: by_weight
 殁年	monfeu
 摸奶	monh
 模拟	moni
-莫逆	monii
+摸你	monii
+莫逆	moniio
 磨难	monj
 莫能	monm
 莫能	mons
