更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -29371,14 +29371,14 @@ sort: by_weight
 官僚作风	glzf
 公仔	glzh
 公债	glzhu
-公子	glzi
-工资	glzie
-橄榄枝	glziee
+工资	glzi
+橄榄枝	glzie
 工职	glziee
 共知	glzieu
 供职	glzii
 个例子	glziii
 公职	glziu
+公子	glziua
 公知	glziuu
 公制	glziuu
 攻占	glzj
