更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -123978,8 +123978,8 @@ sort: by_weight
 砖窑	zbyk
 专用	zbyl
 转用	zbyleu
-转悠	zbyr
-专有	zbyre
+专有	zbyr
+转悠	zbyre
 这不也是	zbys
 专员	zbyt
 转院	zbyte
@@ -132084,8 +132084,8 @@ sort: by_weight
 转用	ztyleu
 最讨厌了	ztylo
 在天愿作比翼鸟	ztyn
-转悠	ztyr
-专有	ztyre
+专有	ztyr
+转悠	ztyre
 詹天佑	ztyru
 专员	ztyt
 转院	ztyte
