更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -28221,6 +28221,7 @@ sort: by_weight
 干嘛	gjma
 敢吗	gjmaa
 干妈	gjmae
+干吗	gjmaei
 干么	gjme
 盖浇面	gjmf
 赶明	gjmg
@@ -74500,8 +74501,8 @@ sort: by_weight
 全览	qtlj
 全裸	qtlo
 去他妈	qtm
-犬马	qtma
-全码	qtmai
+全码	qtma
+犬马	qtmae
 全民	qtmb
 去他妈的	qtmd
 全面	qtmf
