更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -78294,8 +78294,7 @@ sort: by_weight
 纱帽	samka
 傻帽	samki
 杀猫	samku
-厦门	samn
-沙门	samna
+沙门	samn
 沙漠	samo
 萨摩	samoi
 沙弥	samt
@@ -83281,7 +83280,6 @@ sort: by_weight
 神马都是	smdso
 省队	smdv
 什么东西	smdx
-厦门大学	smdxe
 神马东西	smdxo
 什么都没有	smdy
 深明大义	smdya
@@ -83560,7 +83558,6 @@ sort: by_weight
 盛世	smsie
 盛事	smsiee
 声势	smsiei
-厦门市	smsieo
 史密斯	smsii
 省事	smsiie
 省时	smsiio
@@ -106554,8 +106551,8 @@ sort: by_weight
 小口径	xkj
 宵禁	xkjb
 骁将	xkjca
-小脚	xkjd
 星空键道	xkjd
+小脚	xkjdi
 啸叫	xkjdo
 笑着	xkje
 小泽	xkjeia
@@ -106865,13 +106862,13 @@ sort: by_weight
 消夜	xky
 小雅	xkya
 小鸭	xkyai
-消音	xkyb
 星空一笔	xkyb
-消隐	xkyba
+消音	xkyba
+消隐	xkybaa
 校印	xkybe
 小引	xkybi
 逍遥	xkyd
-星空一道	xkyd
+星空一道	xkydo
 宵夜	xkye
 消夜	xkyea
 笑靥	xkyeu
@@ -107327,6 +107324,7 @@ sort: by_weight
 秀逗	xmdr
 小米电视	xmds
 羞对	xmdv
+厦门大学	xmdx
 朽腐	xmf
 秀发	xmfa
 羞愤	xmfn
@@ -107430,8 +107428,9 @@ sort: by_weight
 徐码输入法	xmsfu
 小米手环	xmsh
 休赛	xmsh
-西敏寺	xmsi
+厦门市	xmsi
 修士	xmsi
+西敏寺	xmsie
 修饰	xmsii
 休市	xmsiio
 锈蚀	xmsiiu
@@ -108661,8 +108660,9 @@ sort: by_weight
 瞎猫	xsmk
 吓蒙	xsmm
 瞎蒙	xsmmi
-学生们	xsmn
+厦门	xsmn
 些什么呢	xsmni
+学生们	xsmno
 先生们	xsmnu
 夏末	xsmo
 瞎忙	xsmp
