--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -7217,10 +7217,11 @@ sort: by_weight
 镴	laioaa
 拉	laiuoe
 啦	lao
-喇	laoe
-辣	laoee
+辣	laoe
+瘌	laoee
 瘌	laoeei
 辣	laoeei
+喇	laoei
 喇	laoeia
 旯	laoi
 旯	laoiua
