更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -78838,11 +78838,11 @@ sort: by_weight
 酸菜牛肉面	scnm
 说出你的故事	scns
 奢侈品	scp
-收藏品	scpb
-水产品	scpba
+双拼	scpb
+收藏品	scpba
 双聘	scpbae
-双拼	scpbai
 双频	scpbai
+水产品	scpbao
 四处碰壁	scpbi
 收藏品	scpc
 水产品	scpca
