更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -15731,15 +15731,18 @@ sort: by_weight
 打抱不平	dbbp
 大半辈子	dbbz
 大白菜	dbc
+丢丑	dbcd
 搭便车	dbce
 断编残简	dbcj
 打不出来	dbcl
+丢丑	dbcr
 搭便车	dbcs
 得不偿失	dbcs
 打不出	dbcu
 大病初愈	dbcy
 断壁残垣	dbcyo
 对不对	dbd
+丢掉	dbdd
 得不到的	dbdd
 得不到的永远在骚动	dbddu
 嘚吧嘚	dbde
@@ -15753,6 +15756,7 @@ sort: by_weight
 懂不懂	dbdlo
 东北地区	dbdq
 独步当时	dbds
+丢段	dbdt
 对比度	dbdu
 大部队	dbdv
 代表队	dbdvi
@@ -15761,18 +15765,21 @@ sort: by_weight
 的办法	dbfa
 大部分的	dbfd
 东北风	dbfm
+丢分	dbfn
 的部分	dbfn
 对半分	dbfna
 大比分	dbfne
 打比方	dbfp
 大部分人	dbfr
 大半个	dbg
+丢光	dbgc
 电报挂号	dbgh
 大罢工	dbgl
 躲不过	dbgo
 抵不过	dbgoi
 对簿公堂	dbgt
 打边鼓	dbgu
+丢给	dbgw
 躲不过十五	dbgw
 大半个月	dbgy
 都不会	dbh
@@ -15786,8 +15793,11 @@ sort: by_weight
 单笔划	dbhso
 单笔画	dbhsou
 东北虎	dbhu
+丢魂	dbhy
 的背景	dbj
 大爆炸	dbja
+丢进	dbjb
+丢尽	dbjbu
 代表着	dbje
 大保健	dbjf
 大不敬	dbjg
@@ -15803,8 +15813,10 @@ sort: by_weight
 都柏林	dblb
 大不了的	dbld
 大不列颠	dblde
+丢了	dble
 碉堡了	dble
 屌爆了	dblea
+丢脸	dblf
 大不列颠及北爱尔兰联合王国	dblg
 等比例	dbli
 达标率	dblv
@@ -15812,6 +15824,7 @@ sort: by_weight
 大步流星	dblx
 德布罗意	dbly
 道不明	dbm
+丢命	dbmg
 淡泊名利	dbml
 淡泊明志	dbmz
 都不能	dbn
@@ -15823,18 +15836,25 @@ sort: by_weight
 打保票	dbpd
 对不起	dbq
 夺宝奇兵	dbqb
+丢钱	dbqf
+丢却	dbqh
+丢弃	dbqi
+丢钱	dbqj
 调兵遣将	dbqj
 东半球	dbqo
 东半球	dbqq
+丢却	dbqz
 倒不如	dbr
 大步如飞	dbrf
 倒背如流	dbrl
+丢人	dbrn
 东北人	dbrn
 大不如前	dbrq
 倒不如说	dbrs
 代表人物	dbrw
 都不是	dbs
 对不上号	dbsh
+丢失	dbsi
 倒不是	dbsi
 大别山	dbsj
 断背山	dbsjo
@@ -15869,6 +15889,7 @@ sort: by_weight
 杜邦线	dbxj
 短兵相接	dbxj
 东奔西跑	dbxp
+丢下	dbxs
 大不相同	dbxt
 都不需要	dbxy
 东奔西走	dbxz
@@ -15889,8 +15910,10 @@ sort: by_weight
 地板砖	dbzb
 都不知道	dbzd
 代表着	dbze
+丢在	dbzh
 蛋白质	dbzi
 蹬鼻子上脸	dbzl
+丢帧	dbzn
 代表作	dbzo
 地板砖	dbzt
 对不住	dbzu
@@ -24636,6 +24659,7 @@ sort: by_weight
 房地	fpd
 放大	fpda
 放达	fpdao
+防丢	fpdb
 放掉	fpdd
 奉陪到底	fpdde
 放得	fpde
@@ -56486,6 +56510,7 @@ sort: by_weight
 量体裁衣	ltcy
 鹿特丹	ltd
 乱打	ltda
+乱丢	ltdb
 乱动	ltdl
 乱党	ltdp
 乱丢	ltdq
@@ -64956,6 +64981,7 @@ sort: by_weight
 农村	nlcy
 那里的	nld
 农大	nlda
+弄丢	nldb
 弄掉	nldd
 弄得	nlde
 农贷	nldh
