更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -81052,38 +81052,29 @@ sort: by_weight
 试射	siseou
 失色	siseu
 私设	siseuo
-四十	sisi
+试试	sisi
 丝丝	sisia
 巳时	sisiao
 事实	sisie
 死尸	sisiea
 世事	sisiee
-死死	sisiee
 石室	sisieo
 石狮	sisieu
 逝世	sisii
-食肆	sisiie
 史事	sisiie
 誓死	sisiie
 誓师	sisiii
-思思	sisiii
 史诗	sisiio
 史实	sisiio
-试试	sisio
-时世	sisioe
+四十	sisiiu
+实施	sisio
 时事	sisioe
-实事	sisioe
-视死	sisioe
 时势	sisioi
-时时	sisioo
-实施	sisioo
 实时	sisioo
-十四	sisiu
+私事	sisiu
 失事	sisiue
-私事	sisiue
 失势	sisiui
-失时	sisiuo
-失实	sisiuo
+十四	sisiui
 适时	sisiuo
 十三	sisj
 四散	sisji
@@ -101174,11 +101165,11 @@ sort: by_weight
 巍巍	wwwwi
 蔚为	wwwwio
 慰问信	wwx
-威信	wwxb
+微信	wwxb
 维新	wwxba
 违心	wwxbe
+威信	wwxbei
 唯心	wwxbo
-微信	wwxbu
 未向	wwxc
 未详	wwxce
 位相	wwxci
@@ -126680,41 +126671,25 @@ sort: by_weight
 直射	ziseu
 只是	zisi
 子时	zisia
-治世	zisiae
 滋事	zisiae
 治史	zisiai
 子嗣	zisiao
 致使	zisie
-至死	zisiee
-志士	zisiee
 致死	zisiee
 指示	zisii
 芝士	zisiie
-执事	zisiie
-指事	zisiie
 指使	zisiii
-之时	zisio
+姿势	zisio
 之始	zisioa
-之世	zisioe
-之事	zisioe
 之死	zisioe
-恣肆	zisioe
-之师	zisioi
 之势	zisioi
-之四	zisioi
-姿势	zisioi
-之实	zisioo
+之时	zisioo
 之失	zisiou
-之私	zisiou
 知识	zisiu
-知事	zisiue
 制式	zisiue
-智士	zisiue
 支使	zisiui
 直视	zisiuo
-旨是	zisiuo
 自视	zisiuo
-自是	zisiuo
 自恃	zisiuo
 自私	zisiuu
 之三	zisj
