更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -129778,11 +129778,9 @@ sort: by_weight
 整装	zmzceo
 怎么知道	zmzd
 怎么做到	zmzdu
-怎么着	zmze
+正则	zmze
 殖民者	zmzee
-正则	zmzeea
 睁着	zmzei
-这么着	zmzeo
 争着	zmzeu
 正在	zmzh
 政治	zmzi
@@ -129802,9 +129800,9 @@ sort: by_weight
 证明自己	zmzj
 征战	zmzju
 争战	zmzjui
-这么早	zmzk
-证照	zmzko
-征兆	zmzku
+征兆	zmzk
+这么早	zmzko
+怎么着	zmzku
 征召	zmzkua
 自卖自夸	zmzkuu
 郑重	zmzl
