更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -5578,6 +5578,7 @@ sort: by_weight
 不愁	bucd
 不测	buce
 簿册	buceu
+不穿	bucf
 不才	buch
 不睬	buche
 不吃	buci
@@ -5598,6 +5599,7 @@ sort: by_weight
 不愁	bucr
 不测	bucs
 簿册	bucsu
+不穿	buct
 不出	bucu
 步出	bucui
 不纯	bucy
@@ -62415,6 +62417,7 @@ sort: by_weight
 美丑	mwcd
 煤车	mwce
 每册	mwceu
+没穿	mwcf
 美差	mwch
 梅菜	mwche
 每次	mwci
@@ -62427,7 +62430,6 @@ sort: by_weight
 美称	mwcmo
 煤层	mwcmoa
 煤城	mwcmoe
-美橙	mwcmoe
 煤尘	mwcn
 没错	mwco
 每场	mwcp
@@ -62435,6 +62437,7 @@ sort: by_weight
 美丑	mwcr
 煤车	mwcs
 每册	mwcsu
+没穿	mwct
 没处	mwcu
 每出	mwcuu
 每处	mwcuuu
