更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -117937,13 +117937,13 @@ sort: by_weight
 亚马逊河	ymxh
 一门心思	ymxs
 月明星稀	ymxx
-也没有	ymy
+有没有	ymy
 有没有一个	ymyg
 越描越黑	ymyh
 仰慕已久	ymyj
 也没有什么	ymym
 有没有什么	ymyme
-有没有	ymyr
+也没有	ymyr
 又没有	ymyra
 也没有人	ymyraa
 有没有人	ymyre
