更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -54,7 +54,6 @@ sort: by_weight
 羓	baouai
 粑	baouai
 叭	baouoo
-八	bau
 爸	bau
 鲅	baua
 鲃	bauaa
@@ -68,6 +67,7 @@ sort: by_weight
 胈	baueua
 魃	baui
 魃	bauieu
+八	bauo
 爸	bauoai
 八	bauooo
 宾	bb
@@ -136,10 +136,10 @@ sort: by_weight
 瀌	bdaoeu
 婊	bdau
 婊	bdauee
-髟	bde
-标	bdee
+标	bde
 标	bdeeei
 表	bdeeua
+髟	bdei
 髟	bdeiuu
 飙	bdeu
 杓	bdeua
@@ -19377,9 +19377,9 @@ sort: by_weight
 晫	zooiie
 唑	zooiie
 昨	zooiue
-怍	zooo
-嘬	zoooi
+嘬	zooo
 嘬	zoooie
+怍	zooou
 怍	zoooue
 着	zoou
 焯	zooui
